@@ -3,8 +3,6 @@ TODO-List:
 
 Improvement :
 -------------
--Add different formats (date, scientific etc...)
--Insert commentary in a cell
 -Add zoom
 -create an script editor for execute script
  (Use KWrite)
